--- a/src/main.css
+++ b/src/main.css
@@ -13,6 +13,11 @@ html{
     background-color: darkgray;
     border-radius: 1rem;
 }
+::-webkit-scrollbar-track{
+    background-color: white;
+
+}
+
 }
 body{
     font-family: "Montserrat", serif;
@@ -28,7 +33,8 @@ h2{
 h3{
     font-size: 1rem;
     color: #333;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
+    height: 85px;
 }
 p{
     font-size: 0.9rem;
@@ -38,4 +44,82 @@ p{
 a{
     text-decoration: none;
     color: #333;
+}
+.card-shadow{
+    width: 100%;
+    min-height: 100vh;
+    overflow-y: scroll;
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    ::-webkit-scrollbar{
+        width: 0.5rem;
+    }
+    ::-webkit-scrollbar-thumb{
+        background-color: red;
+        border-radius: 1rem;
+    }
+    ::-webkit-scrollbar-track{
+        background: white;
+  
+    }
+    
+}
+.detail{
+    width: 80%;
+    background-color: white;
+    border-radius: 1rem;
+    padding: 2rem 2rem;
+    position: absolute;
+    left: 10%;
+    color: black;
+    img{
+        width: 100%;
+    }
+}
+.status{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.info{
+    text-align: center;
+}
+.platforms{
+    display: flex;
+    justify-content: space-evenly;
+    img{
+        margin-left:3rem;
+    }
+}
+.media{
+    margin-top: 3rem;
+    img{
+        width: 100%;
+        height: 60vh;
+       
+        transition: transform 0.3s ease;
+    }
+    img:hover {
+        transform: scale(1.02);
+    }
+}
+.description{
+margin: 5rem 0;
+}
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+    img {
+        width: 100%;
+        height: auto;
+        border-radius: 0.5rem;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+    }
+    img:hover {
+        transform: scale(1.05);
+    }
 }
