--- a/src/main.css
+++ b/src/main.css
@@ -89,8 +89,9 @@ a{
 .platforms{
     display: flex;
     justify-content: space-evenly;
-    img{
-        margin-left:3rem;
+    i{
+        margin-left:2rem;
+        font-size: 2rem;
     }
 }
 .media{
@@ -121,5 +122,50 @@ margin: 5rem 0;
     }
     img:hover {
         transform: scale(1.05);
+    }
+}
+.rating p,.fa-star{
+    font-size: 1.2rem;
+}
+.nav{
+    padding: 3rem 5rem;
+    text-align: center;
+    input{
+        width: 50%;
+        font-size: 1.5rem;
+        padding: 0.5rem;
+        border: 0;
+        outline: none;
+        margin-top: 1rem;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+        font-weight: bold;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    }
+    input::placeholder{
+        font-size: 1rem;
+        color: black;
+        opacity: 0.5;
+    }
+    button{
+        font-size: 1.5rem;
+        font-weight: bold;
+        border: none;
+        padding: 0.5rem 2rem;
+        cursor: pointer;
+        background-color: #333;
+        color: white;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    }
+}
+.logo{
+    display:  flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    cursor: pointer;
+    img{
+        width: 5rem;
+        height: 5rem;
+        margin-right: 10px;
     }
 }
